--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@ document.getElementById("viewMoreBtn").addEventListener("click", function() {
                             </div>
                             <div class="contact-text">
                                 <h4>Email Address</h4>
-                                <a href="mailto:eaglesolutions@gmail.com">eaglesolutions@gmail.com</a>
+                                <a href="mailto:eaglesolutionsfra@gmail.com">eaglesolutionsfra@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -1460,3 +1460,4 @@ document.getElementById("viewMoreBtn").addEventListener("click", function() {
     </script>
 </body>
 </html>
+
